--- a/index.html
+++ b/index.html
@@ -26,6 +26,46 @@
         </ul>
 
     </header>
+    <main>
+        <section>
+            <h1>Work at the speed
+                of thought</h1>
+
+            <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your
+                next user
+                experience.
+            </p>
+            <ul>
+                <li> <button type="button"> </button></li>
+                <li> <button type="button"> </button></li>
+
+            </ul>
+            <button type="button">Get Started</button>
+        </section>
+
+        <section>
+            <h2>Our Services</h2>
+            <ul>
+                <li>Marketing Strategy Development</li>
+                <li>Social Media Management</li>
+                <li>Search Engine Optimization (SEO)</li>
+                <li>Content Creation</li>
+                <li>Email Marketing Campaigns</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Why Choose Us?</h2>
+            <p>We are dedicated to helping your business succeed. Our team of experts will work closely with you to
+                understand your unique needs and develop tailored solutions that deliver results.</p>
+        </section>
+
+        <section>
+            <h2>Contact Us</h2>
+            <p>If you have any questions or would like to learn more about our services, please don't hesitate to reach
+                out.</p>
+            <button type="button">Contact Us</button>
+        </section>
 
 </body>
 
